<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.jeanollion.bacmman</groupId>
    <artifactId>bacmman</artifactId>
    <packaging>pom</packaging>
    <version>3.2.1</version>

    <licenses>
        <license>
            <name>GNU General Public License v3+</name>
            <url>https://www.gnu.org/licenses/gpl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <tensorflow.version>2</tensorflow.version>
    </properties>
    <modules>
        <module>bacmman-core</module>
        <module>bacmman-gui</module>
        <module>bacmman-ij1_</module>
        <module>bacmman-modules-mother-machine</module>
        <module>bacmman-headless</module>
        <module>bacmman-github</module>
        <module>bacmman-dl</module>
        <module>bacmman-tf${tensorflow.version}</module>
        <module>bacmman-tango</module>
    </modules>

    <name>BACMMAN</name>
    <description>BACteria in Mother Machine ANalysis software</description>

    <developers>
        <developer>
            <id>jeanollion</id>
            <name>Jean Ollion</name>
            <email>jean.ollion@upmc.fr</email>
            <organization>LJP</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>2</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/jeanollion/bacmman</connection>
        <developerConnection>scm:git:git@github.com:jeanollion/bacmman</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/jeanollion/bacmman</url>
    </scm>



    <dependencies>


    </dependencies>

    <repositories>
        <repository>
            <id>imagej.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>

    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
